--- a/src/SConscript
+++ b/src/SConscript
@@ -78,7 +78,7 @@ common_src = Split("base64.c buffer.c burl.c log.c \
 	safe_memclear.c \
 ")
 
-src = Split("server.c response.c connections.c reqpool.c \
+src = Split("server.c response.c connections.c h2.c reqpool.c \
 	inet_ntop_cache.c \
 	network.c \
 	network_write.c \
