[core] reqpool.[ch] for (request_st *)
move request_init() request_reset() request_free() from connections.c

--- a/src/meson.build
+++ b/src/meson.build
@@ -685,6 +685,7 @@ main_src = [
 	'configfile.c',
 	'connections.c',
 	'data_config.c',
+	'reqpool.c',
 	'inet_ntop_cache.c',
 	'network_write.c',
 	'network.c',
