--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -765,6 +765,8 @@ add_executable(lighttpd
 	h2.c
 	reqpool.c
 	inet_ntop_cache.c
+	ls-hpack/lshpack.c
+	ls-hpack/deps/xxhash/xxhash.c
 	network.c
 	network_write.c
 	data_config.c
@@ -774,6 +776,8 @@ add_executable(lighttpd
 	${COMMON_SRC}
 )
 set(L_INSTALL_TARGETS ${L_INSTALL_TARGETS} lighttpd)
+add_target_properties(lighttpd COMPILE_FLAGS "-DLS_HPACK_USE_LARGE_TABLES=0")
+add_target_properties(lighttpd COMPILE_FLAGS "-DXXH_HEADER_NAME=\\\\\"ls-hpack/deps/xxhash/xxhash.h\\\\\"")
 
 add_and_install_library(mod_access mod_access.c)
 add_and_install_library(mod_accesslog mod_accesslog.c)
