--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -723,7 +723,8 @@ set(COMMON_SRC
 	http_chunk.c stream.c fdevent.c gw_backend.c
 	stat_cache.c plugin.c etag.c array.c
 	data_string.c data_array.c
-	data_integer.c algo_sha1.c md5.c
+	data_integer.c
+	algo_md5.c algo_sha1.c
 	fdevent_select.c fdevent_libev.c
 	fdevent_poll.c fdevent_linux_sysepoll.c
 	fdevent_solaris_devpoll.c fdevent_solaris_port.c
