[core] rename splaytree.[ch] to algo_splaytree.[ch]

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -81,7 +81,7 @@ common_src=base64.c buffer.c burl.c log.c \
 	stat_cache.c plugin.c etag.c array.c \
 	data_string.c data_array.c \
 	data_integer.c \
-	algo_md5.c algo_sha1.c \
+	algo_md5.c algo_sha1.c algo_splaytree.c \
 	fdevent_select.c fdevent_libev.c \
 	fdevent_poll.c fdevent_linux_sysepoll.c \
 	fdevent_solaris_devpoll.c fdevent_solaris_port.c \
@@ -94,7 +94,6 @@ common_src=base64.c buffer.c burl.c log.c \
 	rand.c \
 	request.c \
 	sock_addr.c \
-	splaytree.c \
 	safe_memclear.c
 
 src = server.c response.c connections.c h2.c reqpool.c \
@@ -454,7 +453,7 @@ mod_wstunnel_la_LIBADD = $(common_libadd) $(CRYPTO_LIB)
 hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	response.h request.h reqpool.h fastcgi.h chunk.h h2.h \
 	first.h http_chunk.h \
-	algo_md.h algo_md5.h algo_sha1.h \
+	algo_md.h algo_md5.h algo_sha1.h algo_splaytree.h \
 	http_auth.h http_header.h http_vhostdb.h stream.h \
 	fdevent.h gw_backend.h connections.h base.h base_decls.h stat_cache.h \
 	plugin.h plugin_config.h \
@@ -466,7 +465,7 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	sys-crypto.h sys-crypto-md.h \
 	sys-endian.h sys-mmap.h sys-socket.h sys-strings.h \
 	mod_cml.h mod_cml_funcs.h \
-	safe_memclear.h sock_addr.h splaytree.h status_counter.h \
+	safe_memclear.h sock_addr.h status_counter.h \
 	mod_magnet_cache.h \
 	ls-hpack/lshpack.h \
 	ls-hpack/lsxpack_header.h \
