--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -101,7 +101,7 @@ src = server.c response.c connections.c h2.c reqpool.c \
 	network.c \
 	network_write.c \
 	ls-hpack/lshpack.c \
-	ls-hpack/deps/xxhash/xxhash.c \
+	algo_xxhash.c \
 	data_config.c \
 	vector.c \
 	configfile.c configparser.c
@@ -453,7 +453,7 @@ mod_wstunnel_la_LIBADD = $(common_libadd) $(CRYPTO_LIB)
 hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	response.h request.h reqpool.h fastcgi.h chunk.h h2.h \
 	first.h http_chunk.h \
-	algo_md.h algo_md5.h algo_sha1.h algo_splaytree.h \
+	algo_md.h algo_md5.h algo_sha1.h algo_splaytree.h algo_xxhash.h \
 	http_auth.h http_header.h http_vhostdb.h stream.h \
 	fdevent.h gw_backend.h connections.h base.h base_decls.h stat_cache.h \
 	plugin.h plugin_config.h \
@@ -469,7 +469,6 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	mod_magnet_cache.h \
 	ls-hpack/lshpack.h \
 	ls-hpack/lsxpack_header.h \
-	ls-hpack/deps/xxhash/xxhash.h \
 	ls-hpack/huff-tables.h
 
 
