[mod_dirlisting] fix config parsing crash
(bug on master branch; never released)

(thx avij)

update doc that dir-listing.hide-dotfiles = "enable" by default
since lighttpd 1.4.40 https://redmine.lighttpd.net/issues/1081

--- a/doc/config/conf.d/dirlisting.conf
+++ b/doc/config/conf.d/dirlisting.conf
@@ -13,9 +13,9 @@ dir-listing.activate      = "disable"
 
 ##
 ## Hide dot files from the listing?
-## By default they are listed.
+## By default they are hidden (not listed).
 ##
-dir-listing.hide-dotfiles = "disable" 
+dir-listing.hide-dotfiles = "enable"
 
 ##
 ## list of regular expressions. Files that match any of the specified
