[doc] refresh doc/config/*/*

--- a/doc/config/conf.d/access_log.conf
+++ b/doc/config/conf.d/access_log.conf
@@ -22,6 +22,10 @@ accesslog.filename          = log_root + "/access.log"
 ## accesslog.use-syslog setting and uncomment the next line.
 ##
 #accesslog.use-syslog       = "enable"
+##
+## syslog level defaults to 6 ("Informational")
+## https://en.wikipedia.org/wiki/Syslog#Severity_level
+#accesslog.syslog-level     = 6
 
 #
 #######################################################################
