--- a/doc/config/conf.d/auth.conf
+++ b/doc/config/conf.d/auth.conf
@@ -3,13 +3,12 @@
 ##  Authentication Module
 ## -----------------------
 ##
-## See https://redmine.lighttpd.net/projects/lighttpd/wiki/docs_modauth
-## for more info.
+## See https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModAuth
+## for more info and many more options.
 ##
 
 #auth.backend                 = "plain"
 #auth.backend.plain.userfile  = "/etc/lighttpd/lighttpd.user"
-#auth.backend.plain.groupfile = "/etc/lighttpd/lighttpd.group"
 
 #auth.backend.ldap.hostname = "localhost"
 #auth.backend.ldap.base-dn  = "dc=my-domain,dc=com"
@@ -22,6 +21,15 @@
 #                                 "require" => "valid-user"
 #                               ),
 #                             )
+
+##
+## cache passwords/digests in memory to reduce load on the backend
+## max-age is in seconds
+##   cache is checked for expiration every 8 seconds, so actual
+##   caching may be up to 8 seconds longer than configured max-age.
+## default: inactive (no caching)
+##
+#auth.cache = ("max-age" => "600")
 
 ##
 #######################################################################
