--- a/doc/config/conf.d/cgi.conf
+++ b/doc/config/conf.d/cgi.conf
@@ -30,4 +30,31 @@ cgi.assign                 = ( ".pl"  => "/usr/bin/perl",
 #}
 
 ##
+## require execute permission (+x) on files for CGI scripts
+## default: disable
+##
+#cgi.execute-x-only = "enable"
+
+##
+## process X-Sendfile (if present) from CGI response
+## https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModFastCGI#X-Sendfile
+## default: disable
+##
+#cgi.x-sendfile = "enable"
+#cgi.x-sendfile-docroot = ( "/srv/www/html", "/srv/www/static" )
+
+##
+## Local Redirect Response optimization
+## https://www.ietf.org/rfc/rfc3875 6.2.2 Local Redirect Response optimization
+## default: disable
+##
+#cgi.local-redir = "enable"
+
+##
+## permit Upgrade, e.g. Upgrade: websocket
+## default: disable
+##
+#cgi.upgrade = "enable"
+
+##
 #######################################################################
