--- a/doc/config/conf.d/deflate.conf
+++ b/doc/config/conf.d/deflate.conf
@@ -1,31 +1,62 @@
 #######################################################################
 ##
-##  Output Compression 
+##  Output Compression
 ## --------------------
 ##
-## See https://redmine.lighttpd.net/projects/lighttpd/wiki/docs_moddeflate
+## See https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModDeflate
 ##
 server.modules += ( "mod_deflate" )
 
 ##
-## where should the compressed files be cached?
-## see the base config for the declaration of the variable.
+## mimetypes to compress
 ##
-## This directory should be changed per vhost otherwise you can
-## run into trouble with overlapping filenames
-##
-deflate.cache-dir         = cache_dir + "/compress"
+#deflate.mimetypes = ("text/")       # prefix matches all text/* Content-Type responses
+#deflate.mimetypes = ("text/html", "text/plain", "text/css", "text/javascript", "text/xml")
+deflate.mimetypes         = ("text/plain", "text/html")
 
 ##
-## FileTypes to compress.
-## 
-deflate.filetype          = ("text/plain", "text/html")
+## permitted encodings
+##
+deflate.allowed-encodings = ("brotli", "gzip", "deflate")
 
 ##
-## Maximum response size that will be compressed.
-## Default is 0, which uses internal default of 128 MB as limit.
-## 
+## optional
+##
+
+##
+## file cache location
+## lighttpd can store compressed files in cache by path and etag, and can serve
+## compressed files from cache instead of re-compressing files each request
+##
+#deflate.cache-dir = "/path/to/compress/cache"
+#deflate.cache-dir = cache_dir + "/compress"
+
+##
+## maximum response size (in KB) that will be compressed
+## default: 131072  # measured in KB (131072 indicates 128 MB)
+## Specifying 0 uses internal default of 128 MB as limit
+##
+#deflate.max-compress-size = 131072
 #deflate.max-compress-size = 0
+
+##
+## minimum response size that will be compressed
+## default: 256
+##
+#deflate.min-compress-size = 256     # measured in bytes
+
+##
+## system load average limit, above which mod_deflate is temporarily disabled
+##
+#deflate.max-loadavg = "3.50"
+
+##
+## tunables for compression algorithms
+## (often best left at defaults)
+##
+#deflate.compression-level = 9
+#deflate.output-buffer-size = 8192
+#deflate.work-block-size = 2048
 
 ##
 #######################################################################
