--- a/doc/config/conf.d/dirlisting.conf
+++ b/doc/config/conf.d/dirlisting.conf
@@ -8,14 +8,14 @@
 
 ##
 ## Enabled Directory listing
-##
-dir-listing.activate      = "disable"
+## default: disable
+#dir-listing.activate      = "enable"
 
 ##
 ## Hide dot files from the listing?
 ## By default they are hidden (not listed).
-##
-dir-listing.hide-dotfiles = "enable"
+## default: enable
+#dir-listing.hide-dotfiles = "enable"
 
 ##
 ## list of regular expressions. Files that match any of the specified
@@ -33,23 +33,63 @@ dir-listing.exclude       = ( "~$" )
 dir-listing.encoding = "UTF-8"
 
 ##
-## Specify the url to an optional CSS file. 
+## local URL to optional CSS stylesheet for the directory listing
 ##
 #dir-listing.external-css  = "/dirindex.css"
 
 ##
-## Include HEADER.txt files above the directory listing. 
-## You can disable showing the HEADER.txt in the listing. 
+## local URL to optional js script to include,
+## e.g. for client side directory list sorting
 ##
-dir-listing.hide-header-file = "disable"
-dir-listing.show-header = "disable"
+#dir-listing.external-js = "/dirindex.js"
+
+##
+## Include HEADER.txt files above the directory listing. 
+## default: disable
+##
+#dir-listing.show-header = "enable"
+##
+## You can disable showing the HEADER.txt in the listing. 
+## default: disable (shows file in listing)
+##
+#dir-listing.hide-header-file = "enable"
+##
+## HTML-encode HEADER.txt
+## (disable to include files as-is, e.g. if files contain valid HTML)
+## default: enable
+##
+#dir-listing.encode-header = "disable"
 
 ##
 ## Include README.txt files above the directory listing. 
-## You can disable showing the README.txt in the listing. 
+## default: disable
 ##
-dir-listing.hide-readme-file = "disable"
-dir-listing.show-readme = "disable"
+#dir-listing.show-readme = "enable"
+##
+## You can disable showing the README.txt in the listing. 
+## default: disable (shows file in listing)
+##
+#dir-listing.hide-readme-file = "enable"
+##
+## HTML-encode README.txt
+## (disable to include files as-is, e.g. if files contain valid HTML)
+## default: enable
+##
+#dir-listing.encode-readme = "disable"
+
+##
+## displays a string in the footer of a listing page
+## default: value of server.tag directive
+##   "<PACKAGE_NAME>/<PACKAGE_VERSION>" e.g. "lighttpd/1.4.56"
+##
+#dir-listing.set-footer = " "
+
+##
+## Use lighttpd-provided page tags <body> and <html>
+## (disable if HEADER.txt and README.txt provide those tags)
+## default: enable
+##
+#dir-listing.auto-layout = "disable"
 
 ##
 #######################################################################
