--- a/doc/config/conf.d/evhost.conf
+++ b/doc/config/conf.d/evhost.conf
@@ -15,6 +15,8 @@ server.modules += ( "mod_evhost" )
 ## %2 => domain name without tld
 ## %3 => subdomain 1 name
 ## %4 => subdomain 2 name
+## %_ => full domain name
+## %{M.N} => single character at 1-indexed position N in the domain segment %M (e.g %0 - %9)
 ##
 evhost.path-pattern        = vhosts_dir + "/%3/htdocs/"
 
