--- a/doc/config/conf.d/scgi.conf
+++ b/doc/config/conf.d/scgi.conf
@@ -1,9 +1,9 @@
 #######################################################################
 ##
-##  FastCGI Module 
+##  SCGI Module 
 ## --------------- 
 ##
-## See https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModFastCGI
+## See https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModSCGI
 ##
 server.modules += ( "mod_scgi" )
 
