--- a/doc/config/conf.d/webdav.conf
+++ b/doc/config/conf.d/webdav.conf
@@ -20,14 +20,21 @@ $HTTP["url"] =~ "^/dav($|/)" {
   #webdav.is-readonly = "enable"
 
   ##
+  ## SQLite database for WebDAV properties and WebDAV locks
+  ##
+  webdav.sqlite-db-name = home_dir + "/webdav.db"
+
+  ##
   ## Log the XML Request bodies for debugging
   ##
   #webdav.log-xml = "disable"
 
   ##
-  ##  
+  ## mod_webdav further tunables
+  ## See online doc:
+  ##   https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModWebDAV
   ##
-  webdav.sqlite-db-name = home_dir + "/webdav.db"
+  #webdav.opts = ( ... )
 }
 ##
 #######################################################################
