--- a/doc/config/lighttpd.conf
+++ b/doc/config/lighttpd.conf
@@ -15,7 +15,7 @@
 ##
 var.log_root    = "/var/log/lighttpd"
 var.server_root = "/srv/www"
-var.state_dir   = "/var/run"
+var.state_dir   = "/run"
 var.home_dir    = "/var/lib/lighttpd"
 var.conf_dir    = "/etc/lighttpd"
 
@@ -401,8 +401,8 @@ include "conf.d/dirlisting.conf"
 
 ##
 ## Should lighttpd follow symlinks?
-## 
-server.follow-symlink = "enable"
+## default: "enable"
+#server.follow-symlink = "enable"
 
 ##
 ## force all filenames to be lowercase?
@@ -411,8 +411,8 @@ server.follow-symlink = "enable"
 
 ##
 ## defaults to /var/tmp as we assume it is a local harddisk
-##
-server.upload-dirs = ( "/var/tmp" )
+## default: "/var/tmp"
+#server.upload-dirs = ( "/var/tmp" )
 
 ##
 #######################################################################
@@ -438,7 +438,7 @@ server.upload-dirs = ( "/var/tmp" )
 ##     #ssl.cipher-list             = "HIGH"   # default
 ##
 ##     # (recommended to accept only TLSv1.2 and TLSv1.3)
-##     #ssl.openssl.ssl-conf-cmd = ("Protocol" => "-ALL, TLSv1.2, TLSv1.3")
+##     #ssl.openssl.ssl-conf-cmd = ("MinProtocol" => "TLSv1.2")
 ##
 ##     server.name                 = "www.example.com"
 ##
