--- a/doc/config/modules.conf
+++ b/doc/config/modules.conf
@@ -12,6 +12,9 @@
 ## You may disable automatic loading of default modules by setting
 ##   server.compat-module-load = "disable"
 ##
+## lighttpd provides many modules, and not all are listed below.  Please see:
+## https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ConfigurationOptions
+##
 ## Modules, which are pulled in via conf.d/*.conf
 ##
 ## - mod_accesslog     -> conf.d/access_log.conf
@@ -46,14 +49,14 @@
 ##
 
 server.modules = (
+#  "mod_rewrite",
   "mod_access",
-#  "mod_alias",
+#  "mod_evasive",
 #  "mod_auth",
 #  "mod_authn_file",
-#  "mod_evasive",
-#  "mod_setenv",
 #  "mod_redirect",
-#  "mod_rewrite",
+#  "mod_setenv",
+#  "mod_alias",
 )
 
 ##
@@ -63,6 +66,21 @@ server.modules = (
 ##
 ##  Config for various Modules
 ##
+
+##
+## mod_expire
+##
+#include "conf.d/expire.conf"
+
+##
+## mod_deflate
+##
+#include "conf.d/deflate.conf"
+
+##
+## mod_magnet
+##
+#include "conf.d/magnet.conf"
 
 ##
 ## mod_geoip
@@ -85,19 +103,9 @@ server.modules = (
 #include "conf.d/webdav.conf"
 
 ##
-## mod_deflate
-##
-#include "conf.d/deflate.conf"
-
-##
 ## mod_userdir
 ##
 #include "conf.d/userdir.conf"
-
-##
-## mod_magnet
-##
-#include "conf.d/magnet.conf"
 
 ##
 ## mod_cml
@@ -110,16 +118,6 @@ server.modules = (
 #include "conf.d/rrdtool.conf"
 
 ##
-## mod_proxy
-##
-#include "conf.d/proxy.conf"
-
-##
-## mod_expire
-##
-#include "conf.d/expire.conf"
-
-##
 ## mod_secdownload
 ##
 #include "conf.d/secdownload.conf"
@@ -129,8 +127,13 @@ server.modules = (
 
 #######################################################################
 ##
-## CGI modules
+## CGI/proxy modules
 ##
+
+##
+## mod_proxy
+##
+#include "conf.d/proxy.conf"
 
 ##
 ## SCGI (mod_scgi)
