[doc] comment out config disabling Range for .pdf
comment out lighttpd.conf config disabling Range requests for .pdf

bug in Adobe Acrobat Reader browser plugin dates to over 10 years ago
https://redmine.lighttpd.net/issues/171
https://redmine.lighttpd.net/issues/541
https://jarrettbroder.blogspot.com/2010/11/adobe-acrobat-reader-plugin-stalls-when.html
one possible workaround was to disable "fast web view" in the
  Adobe Acrobat Reader

bug in Chrome fixed in 2015
https://bugs.chromium.org/p/chromium/issues/detail?id=442318

However, there still may be issues with PDF readers mishandling Range
requests, e.g. with coalesced ranges, so the section remains in the
sample lighttpd.conf, but is commented out.
https://github.com/mozilla/pdf.js/issues/9022

--- a/doc/config/lighttpd.conf
+++ b/doc/config/lighttpd.conf
@@ -346,10 +346,11 @@ url.access-deny             = ( "~", ".inc" )
 ##
 ## disable range requests for pdf files
 ## workaround for a bug in the Acrobat Reader plugin.
+## (ancient; should no longer be needed)
 ##
-$HTTP["url"] =~ "\.pdf$" {
-  server.range-requests = "disable"
-}
+#$HTTP["url"] =~ "\.pdf$" {
+#  server.range-requests = "disable"
+#}
 
 ##
 ## url handling modules (rewrite, redirect)
