[build] mark dependencies on crypto lib for MD5()
(lighttpd base executable depends on crypto lib for rand functionality,
 so the crypto library was already being loaded -- no missing symbols)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -954,7 +954,7 @@ if(WITH_LUA)
 	add_target_properties(mod_magnet COMPILE_FLAGS ${LUA_CFLAGS})
 
 	add_and_install_library(mod_cml "mod_cml.c;mod_cml_lua.c;mod_cml_funcs.c")
-	target_link_libraries(mod_cml ${LUA_LDFLAGS})
+	target_link_libraries(mod_cml ${LUA_LDFLAGS} ${CRYPTO_LIBRARY})
 	add_target_properties(mod_cml COMPILE_FLAGS ${LUA_CFLAGS})
 	if(WITH_MEMCACHED)
 		target_link_libraries(mod_cml memcached)
@@ -979,7 +979,7 @@ if(HAVE_MYSQL_H AND HAVE_MYSQL)
 	include_directories(/usr/include/mysql)
 
 	add_and_install_library(mod_authn_mysql "mod_authn_mysql.c")
-	set(L_MOD_AUTHN_MYSQL)
+	set(L_MOD_AUTHN_MYSQL ${CRYPTO_LIBRARY})
 	if(HAVE_LIBCRYPT)
 		set(L_MOD_AUTHN_MYSQL ${L_MOD_AUTHN_MYSQL} crypt)
 	endif()
@@ -996,7 +996,7 @@ if(HAVE_DBI_H AND HAVE_DBI)
 	target_link_libraries(mod_vhostdb_dbi dbi)
 
 	add_and_install_library(mod_authn_dbi "mod_authn_dbi.c")
-	set(L_MOD_AUTHN_DBI)
+	set(L_MOD_AUTHN_DBI ${CRYPTO_LIBRARY})
 	if(HAVE_LIBCRYPT)
 		set(L_MOD_AUTHN_DBI ${L_MOD_AUTHN_DBI} crypt)
 	endif()
@@ -1122,6 +1122,7 @@ if(NOT ${CRYPTO_LIBRARY} EQUAL "")
 	set(L_MOD_AUTHN_FILE ${L_MOD_AUTHN_FILE} ${CRYPTO_LIBRARY})
 	target_link_libraries(mod_authn_file ${L_MOD_AUTHN_FILE})
 	target_link_libraries(mod_secdownload ${CRYPTO_LIBRARY})
+	target_link_libraries(mod_usertrack ${CRYPTO_LIBRARY})
 	target_link_libraries(mod_wstunnel ${CRYPTO_LIBRARY})
 endif()
 
