[mod_wolfssl] cripple SNI if not built OPENSSL_ALL
crippled functionality if wolfssl library not built --enable-opensslall
* SNI not handled since SNI callbacks are disabled in wolfSSL library
  unless the wolfSSL library is built with --enable-openssall

  This means that there is only one certificate per listening socket --
  no certificate selection based on server name indication (SNI)
  and is additionally a violation of the HTTP/2 specification,
  which requires SNI.

slightly reduced functionality if wolfssl not built --enable-opensslall
* disable client certificate verification (error out if in lighttpd.conf)
* omit SSL_CIPHER_USEKEYSIZE, SSL_CIPHER_ALGKEYSIZE env vars

--- a/configure.ac
+++ b/configure.ac
@@ -742,7 +742,7 @@ if test "$WITH_WOLFSSL" != no; then
   )
   AC_COMPILE_IFELSE([AC_LANG_SOURCE([[
     #include <wolfssl/options.h>
-    #if !defined(HAVE_LIGHTY) && !defined(OPENSSL_ALL)
+    #if !defined(HAVE_LIGHTY) && !defined(OPENSSL_EXTRA)
     #error HAVE_LIGHTY macro not defined
     #endif
   ]])], [], [AC_MSG_ERROR([wolfssl must be built with ./configure --enable-lighty])])
